Favorite/unfavorite working. Endpoints for favorites done and tested. Comments next

--- a/client/src/pages/LandingPage.css
+++ b/client/src/pages/LandingPage.css
@@ -6,3 +6,18 @@
     background-color: rgb(124, 221, 124);
 
 }
+
+div {
+    display: block
+}
+
+header {
+    padding: 60px;
+    text-align: center;
+    color: white;
+    font-size: 30px;
+  }
+
+  .searchbutton {
+    color: white;
+  }
