--- a/client/src/App.css
+++ b/client/src/App.css
@@ -45,3 +45,9 @@ html, body {
  body {
   background-color: rgb(124, 221, 124) !important;
 }
+.navbar {
+  padding: 60px;
+  text-align: center;
+  background-color: white;
+  font-size: 30px;
+} 
